<resources>
    <string name="app_name">InsuranceSysten</string>
    <string name="action_settings">Settings</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="father_name">Отчество</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="message_error_user_not_found">Пользователь с такой почтой и паролем не найден!</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="categories">Категории</string>
    <string name="cases">Случаи</string>
    <string name="save">Сохранить</string>
    <string name="case_label">Страховой случай:</string>
    <string name="case_percent_label">Процент выплаты:</string>
    <string name="individual_client">Физ. клиенты</string>
    <string name="legal_client">Юр. клиенты</string>
    <string name="policy">Полисы</string>
    <string name="payment">Обращения</string>
    <string name="other">Другое</string>
    <string name="export">Выгрузить отчет</string>
    <string name="exit">Выйти</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="title_activity_policy">PolicyActivity</string>
    <string name="client_photo">Client photo</string>
    <string name="org_name">Название организации</string>
    <string name="unique_number">Уникальный номер</string>
    <string name="director">ФИО директора</string>
    <string name="accountant">ФИО бухгалтера</string>
    <string name="address">Адрес</string>
    <string name="phone">Контактный номер</string>
    <string name="registrate">Зарегистрировать</string>
    <string name="full_name">Фамилия и инициалы</string>
    <string name="birth_date">Дата рождения</string>
    <string name="sex">Пол: Мужчина - Женщина</string>
    <string name="driving_experience">Опыт вождения</string>
    <string name="client">Клиент</string>
    <string name="policies">Полисы</string>
    <string name="payments">Выплаты</string>
    <string name="category">Категория</string>
    <string name="choose">Выбрать</string>
</resources>
