<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_individual"
                android:icon="@drawable/ic_profile"
                android:title="@string/individual_client"/>
        <item
                android:id="@+id/nav_legal"
                android:icon="@drawable/ic_legal"
                android:title="@string/legal_client"/>
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/export"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/exit"/>
        </menu>
    </item>

</menu>
