<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registration.RegistrationActivity">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/nameInput"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:inputType="text"
                android:id="@+id/name"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/surnameInput"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:inputType="text"
                android:id="@+id/surname"
                android:hint="@string/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/fatherNameInput"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/surnameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:inputType="text"
                android:id="@+id/fatherName"
                android:hint="@string/father_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInput"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/fatherNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInput"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:inputType="textPassword"
                android:id="@+id/password"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/repeatPasswordInput"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:inputType="textPassword"
                android:id="@+id/repeatPassword"
                android:hint="@string/repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/registrationButton"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</android.support.constraint.ConstraintLayout>