<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInput"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:inputType="text"
                android:id="@+id/email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInput"
            app:layout_constraintTop_toBottomOf="@id/emailInput"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:inputType="textPassword"
                android:id="@+id/password"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/loginButton"
            android:onClick="login"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/registrationButton"
            android:layout_marginBottom="10dp"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/registrationButton"
            android:onClick="registration"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</android.support.constraint.ConstraintLayout>