<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:minHeight="60dp"
                    android:text="Юридический клиент"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/name"
                        android:inputType="text"
                        android:hint="@string/org_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/uniqueNumber"
                        android:inputType="numberDecimal"
                        android:hint="@string/unique_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/director"
                        android:inputType="text"
                        android:hint="@string/director"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/accountant"
                        android:inputType="text"
                        android:hint="@string/accountant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/address"
                        android:inputType="textPostalAddress"
                        android:hint="@string/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/phone"
                        android:inputType="phone"
                        android:hint="@string/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:layout_marginTop="10dp"
                    android:id="@+id/registrationButton"
                    android:textColor="@color/white"
                    android:background="@color/colorAccent"
                    android:text="@string/registrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>