<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".client.ClientActivity">

    <android.support.v7.widget.CardView
            android:visibility="gone"
            android:id="@+id/legalClientCard"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/nameInput"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/companyName"
                        android:enabled="false"
                        android:hint="Название организации"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/uniqueNumberInput"
                    android:layout_below="@+id/nameInput"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/uniqueNumber"
                        android:hint="@string/unique_number"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/directorInput"
                    android:layout_below="@+id/uniqueNumberInput"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/director"
                        android:hint="@string/director"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/accountantInput"
                    android:layout_below="@+id/directorInput"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/accountant"
                        android:hint="@string/accountant"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/addressInputL"
                    android:layout_below="@+id/accountantInput"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/legalAddress"
                        android:hint="@string/address"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/phoneInputL"
                    android:layout_below="@+id/addressInputL"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/legalPhone"
                        android:hint="@string/phone"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/individualClientCard"
            android:visibility="gone"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/photo"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_picture"
                    android:contentDescription="@string/client_photo"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="Полянский Михаил Русланович"
                    android:id="@+id/fullName"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignTop="@+id/photo"
                    android:layout_toEndOf="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_below="@+id/fullName"
                    android:layout_toEndOf="@+id/photo"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/birthDate"
                        android:hint="@string/birth_date"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/sexInput"
                    android:layout_below="@+id/photo"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/sex"
                        android:hint="@string/sex"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/drivingExperience"
                    android:layout_below="@+id/sexInput"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/driving"
                        android:hint="@string/driving_experience"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/addressInput"
                    android:layout_below="@+id/drivingExperience"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/individualAddress"
                        android:hint="@string/address"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/phoneInput"
                    android:layout_below="@+id/addressInput"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/individualPhone"
                        android:hint="@string/phone"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:visibility="gone"
                android:layout_margin="10dp"
                android:layout_alignParentTop="true"
                android:layout_above="@id/clientNavigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


    <android.support.design.widget.BottomNavigationView
            android:id="@+id/clientNavigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            app:menu="@menu/client_navigation"/>



    <android.support.design.widget.FloatingActionButton
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="24dp"
            android:layout_above="@+id/clientNavigation"
            android:layout_alignParentEnd="true"
            android:id="@+id/inClientAdd"
            android:src="@drawable/ic_plus_symbol"
            android:onClick="onFabClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</RelativeLayout>